kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-deployment
  namespace: ana-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: anastasijapetrova88704/kiii-project:latest
          ports:
            - containerPort: 8080
