kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
  namespace: ana-namespace
spec:
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
