kubernetes/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: ana-namespace
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
